# wot-moe

./: .gitignore  LICENSE  README.md  config.example.toml  plan.md  pyproject.toml
src/tankvision/: __init__.py  __main__.py  config.py
src/tankvision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tankvision/calculation/: battle_detector.py  ema.py  moe_calculator.py
src/tankvision/calibration/: roi_picker.py
src/tankvision/capture/: screen_capture.py
src/tankvision/data/: session_store.py  threshold_provider.py  wargaming_api.py
src/tankvision/ocr/: garage_detector.py  ocr_pipeline.py  preprocessor.py  template_matcher.py
src/tankvision/overlay/: index.html  overlay.css  overlay.js
src/tankvision/server/: websocket_server.py
src/tankvision/tray/: __init__.py  app.py  log_viewer_window.py  ocr_preview_window.py  settings_dialog.py  state_bridge.py  tray_icon.py
tests/: test_battle_detector.py  test_config.py  test_ema.py  test_garage_detector.py  test_main_integration.py  test_moe_calculator.py  test_moe_correction.py  test_preprocessor.py  test_session_store.py  test_tank_snapshot.py  test_template_matcher.py  test_threshold_provider.py  test_wargaming_api.py  test_wargaming_api_integration.py
