[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wot-console-overlay"
version = "0.1.0"
description = "WoT Console Overlay: Live Marks of Excellence tracker for World of Tanks Console"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "mss>=9.0",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
]
ocr-fallback = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6.2",
]
ui = [
    "PyQt6>=6.5",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
tankvision = "tankvision.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit the live Wargaming API (require network)",
]
